Fix: potencial solucao para o problema que eu tou tendo com o projeto missing

--- a/K8s-Config/Apps/produtor.yml
+++ b/K8s-Config/Apps/produtor.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: produtor-deployment
+  namespace: argocd  
 spec:
   revisionHistoryLimit: 1
   replicas: 1
