--- a/K8s-Config/Apps/api.yml
+++ b/K8s-Config/Apps/api.yml
@@ -4,6 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-deployment
+  namespace: argocd  
 spec:
   revisionHistoryLimit: 1
   replicas: 1
@@ -57,7 +58,8 @@ apiVersion: v1
 kind: Service
 metadata:
   # O nome de DNS que a sua UI (app.js) irá chamar
-  name: api-service 
+  name: api-service \
+  namespace: argocd 
 spec:
   # Acessível apenas DENTRO do cluster
   type: ClusterIP
