--- a/K8s-Config/Apps/ui.yml
+++ b/K8s-Config/Apps/ui.yml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ui-deployment
+  namespace: argocd  
 spec:
   revisionHistoryLimit: 1
   replicas: 1
@@ -26,6 +27,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ui-service
+  namespace: argocd  
 spec:
   # Expõe o serviço fora do cluster
   type: NodePort
