feat: Adiciona recolha de métricas do serviço UI

--- a/Apps/API/Dockerfile
+++ b/Apps/API/Dockerfile
@@ -5,10 +5,10 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# CORRECCIÓN: Copia main.py directamente
 COPY main.py .
 COPY metrics.py .
 
-# faz expose 2 vezes porque temos 2 servidores, um para a API e outro para as metricas
 EXPOSE 8000
 EXPOSE 8001
 
