--- a/Apps/UI/package.json
+++ b/Apps/UI/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "prom-client": "15.1.3"
   },
   "devDependencies": {
     "jest": "^30.2.0"
