fix: aplicando correção para problemas associados ao mongo

--- a/K8s-Config/Infraestrutura/Mongo/mongo.yml
+++ b/K8s-Config/Infraestrutura/Mongo/mongo.yml
@@ -41,6 +41,11 @@ spec:
                 secretKeyRef:
                   name: mongo-secret
                   key: mongo-password
+          readinessProbe:
+            tcpSocket:
+              port: 27017
+            initialDelaySeconds: 5
+            periodSeconds: 10
           volumeMounts:
             - name: mongo-storage
               mountPath: /data/db
