--- a/K8s-Config/Apps/api.yml
+++ b/K8s-Config/Apps/api.yml
@@ -15,11 +15,16 @@ spec:
       labels:
         app: api
     spec:
+      initContainers:
+        - name: wait-for-mongo
+          image: busybox
+          command: ['sh', '-c', 'until nc -z mongo-service 27017; do echo waiting for mongo; sleep 2; done']
       containers:
         - name: api
           # 1. ATUALIZE ESTA TAG:
           # Deve ser a tag que o seu 'ci-pipeline.yml' irá construir
           image: kingdavid08/api:69
+          image: kingdavid08/api:70
           ports:
             # A porta do Uvicorn definida no Dockerfile
             - containerPort: 8000
