--- a/K8s-Config/Apps/consumidor.yml
+++ b/K8s-Config/Apps/consumidor.yml
@@ -18,6 +18,10 @@ spec:
         prometheus.io/path: "/metrics"
         prometheus.io/port: "8001" # A porta que definimos no código Python
     spec:
+      initContainers:
+        - name: wait-for-mongo
+          image: busybox
+          command: ['sh', '-c', 'until nc -z mongo-service 27017; do echo waiting for mongo; sleep 2; done']
       containers:
         - name: consumidor
           image: kingdavid08/consumer:70
