--- a/K8s-Config/Apps/api.yml
+++ b/K8s-Config/Apps/api.yml
@@ -14,6 +14,10 @@ spec:
     metadata:
       labels:
         app: api
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8001"
+        prometheus.io/path: "/metrics"
     spec:
       initContainers:
         - name: wait-for-mongo
