--- a/K8s-Config/Infraestrutura/Mongo/mongo-exporter.yml
+++ b/K8s-Config/Infraestrutura/Mongo/mongo-exporter.yml
@@ -24,11 +24,12 @@ spec:
         image: percona/mongodb_exporter:0.39
         ports:
         - containerPort: 9216
+        command: ["/bin/sh", "-c"]
+        args:
+          - |
+            export MONGODB_URI="mongodb://${MONGO_USER}:${MONGO_PASS}@${MONGO_URL}:27017/?authSource=admin"
+            /mongodb_exporter
         env:
-        # O exporter precisa da connection string para aceder ao MongoDB.
-        # Usamos os mesmos secrets e configmaps que a API já usa.
-        - name: MONGODB_URI
-          value: "mongodb://$(MONGO_USER):$(MONGO_PASS)@$(MONGO_URL)/?ssl=false"
         - name: MONGO_URL
           valueFrom:
             configMapKeyRef:
