--- a/argo-application.yml
+++ b/argo-application.yml
@@ -29,7 +29,7 @@ spec:
   destination:
     # URL padrão do cluster local (Docker Desktop)
     server: https://kubernetes.default.svc 
-    namespace: sd
+    namespace: default
 
   # --- POLÍTICA DE SINCRONIZAÇÃO (A Magia do GitOps) ---
   syncPolicy:
