--- a/K8s-Config/Apps/consumidor.yml
+++ b/K8s-Config/Apps/consumidor.yml
@@ -20,11 +20,11 @@ spec:
     spec:
       initContainers:
         - name: wait-for-mongo
-          image: busybox:1.36
-          command: ['/bin/sh', '-c', 'until nc -z mongo-service 27017; do echo waiting for mongo; sleep 2; done']
+          image: busybox
+          command: ['sh', '-c', 'until nc -z mongo-service 27017; do echo waiting for mongo; sleep 2; done']
       containers:
         - name: consumidor
-          image: kingdavid08/consumer:70
+          image: kingdavid08/consumer:80
           
           # O consumidor agora é um script Python, não um servidor web.
           # O comando executa o módulo 'src.main' como um script.
@@ -33,7 +33,6 @@ spec:
           ports:
             - containerPort: 8001
               name: metrics
-          
           resources:
             requests:
               cpu: "100m"
