Provision Grafana dashboard via ConfigMaps

--- a/K8s-Config/Infraestrutura/Mongo/mongo-exporter.yml
+++ b/K8s-Config/Infraestrutura/Mongo/mongo-exporter.yml
@@ -24,6 +24,8 @@ spec:
         image: percona/mongodb_exporter:0.39
         ports:
         - containerPort: 9216
+        args:
+          - "--compatible-mode" # Mantém nomes antigos das métricas (ex.: mongodb_op_counters_total)
         env:
         - name: MONGO_URL
           valueFrom:
