--- a/K8s-Config/Apps/hpa.yml
+++ b/K8s-Config/Apps/hpa.yml
@@ -2,6 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: api-hpa
+  namespace: sd
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -21,6 +22,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: ui-hpa
+  namespace: sd
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -40,6 +42,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: consumidor-hpa
+  namespace: sd
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -59,6 +62,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: produtor-hpa
+  namespace: sd
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
