--- a/K8s-Config/Apps/api.yml
+++ b/K8s-Config/Apps/api.yml
@@ -4,6 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-deployment
+  namespace: sd
 spec:
   revisionHistoryLimit: 1
   replicas: 1
@@ -27,7 +28,7 @@ spec:
         - name: api
           # 1. ATUALIZE ESTA TAG:
           # Deve ser a tag que o seu 'ci-pipeline.yml' irá construir
-          image: kingdavid08/api:84
+          image: kingdavid08/api:78
           ports:
             # A porta do Uvicorn definida no Dockerfile
             - containerPort: 8000
@@ -74,6 +75,7 @@ kind: Service
 metadata:
   # O nome de DNS que a sua UI (app.js) irá chamar
   name: api-service
+  namespace: sd
 spec:
   # Acessível apenas DENTRO do cluster
   type: ClusterIP
