--- a/K8s-Config/Infraestrutura/Mongo/mongo-express.yml
+++ b/K8s-Config/Infraestrutura/Mongo/mongo-express.yml
@@ -52,4 +52,4 @@ spec:
     - protocol: TCP
       port: 8081
       targetPort: 8081
-      nodePort: 30400 # Pode aceder no browser em http://localhost:30400
+      nodePort: 30401 # Alterado para 30401 para evitar conflito de porta
