--- a/K8s-Config/Apps/consumidor.yml
+++ b/K8s-Config/Apps/consumidor.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: consumidor-deployment
+  namespace: grupo2
 spec:
   revisionHistoryLimit: 1
   replicas: 1
