--- a/K8s-Config/Apps/ui.yml
+++ b/K8s-Config/Apps/ui.yml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ui-deployment
-  namespace: sd
+  namespace: grupo2
 spec:
   revisionHistoryLimit: 1
   replicas: 1
@@ -41,7 +41,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ui-service
-  namespace: sd
+  namespace: grupo2
 spec:
   # Expõe o serviço fora do cluster
   type: NodePort
@@ -51,6 +51,6 @@ spec:
     - protocol: TCP
       port: 3000       # Porta interna do serviço
       targetPort: 3000 # Porta do contentor
-      # Aceda à UI em http://localhost:30100
-      nodePort: 30100
+      # Aceda à UI em http://localhost:30102
+      nodePort: 30102
       name: http
