--- a/K8s-Config/Infraestrutura/Mongo/mongo-config.yml
+++ b/K8s-Config/Infraestrutura/Mongo/mongo-config.yml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mongo-config
+  namespace: grupo2
 data:
   # O nome 'mongo-service' deve ser o mesmo do 'kind: Service' abaixo
   mongo-url: mongo-service
