--- a/K8s-Config/Infraestrutura/Mongo/mongo.yml
+++ b/K8s-Config/Infraestrutura/Mongo/mongo.yml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongo-pvc
+  namespace: grupo2
 spec:
   accessModes:
     - ReadWriteOnce
@@ -15,6 +16,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongo-deployment
+  namespace: grupo2
 spec:
   replicas: 1
   selector:
@@ -58,6 +60,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo-service
+  namespace: grupo2
 spec:
   type: ClusterIP
   selector:
