--- a/K8s-Config/Apps/consumidor.yml
+++ b/K8s-Config/Apps/consumidor.yml
@@ -48,12 +48,14 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: rabbit-secret
-                  key: RABBITMQ_USER
+                  key: username
             - name: RABBITMQ_PASS
               valueFrom:
                 secretKeyRef:
                   name: rabbit-secret
-                  key: RABBITMQ_PASS
+                  key: password
+            - name: RABBITMQ_HOST
+              value: "rabbitmq-cluster.rabbitmq-system.svc.cluster.local"
             
             # 2. Variáveis do MongoDB (necessárias para o config.py)
             - name: MONGO_URL
