--- a/K8s-Config/Apps/hpa.yml
+++ b/K8s-Config/Apps/hpa.yml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: api-hpa
-  namespace: sd
+  namespace: grupo2
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -22,7 +22,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: ui-hpa
-  namespace: sd
+  namespace: grupo2
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -42,7 +42,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: consumidor-hpa
-  namespace: sd
+  namespace: grupo2
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -62,7 +62,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: produtor-hpa
-  namespace: sd
+  namespace: grupo2
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
