Reduzir CPU para 10m e adicionar tolerations para disk-pressure

--- a/K8s-Config/Apps/produtor.yml
+++ b/K8s-Config/Apps/produtor.yml
@@ -18,6 +18,10 @@ spec:
         prometheus.io/port: "8001"
         prometheus.io/path: "/metrics"
     spec:
+      tolerations:
+        - key: "node.kubernetes.io/disk-pressure"
+          operator: "Exists"
+          effect: "NoSchedule"
       containers:
         - name: produtor
           image: kingdavid08/producer:97
@@ -30,7 +34,7 @@ spec:
           
           resources:
             requests:
-              cpu: "50m"
+              cpu: "10m"
               memory: "128Mi"
             limits:
               cpu: "500m"
