--- a/K8s-Config/Apps/consumidor.yml
+++ b/K8s-Config/Apps/consumidor.yml
@@ -19,6 +19,10 @@ spec:
         prometheus.io/path: "/metrics"
         prometheus.io/port: "8001" # A porta que definimos no código Python
     spec:
+      tolerations:
+        - key: "node.kubernetes.io/disk-pressure"
+          operator: "Exists"
+          effect: "NoSchedule"
       initContainers:
         - name: wait-for-mongo
           image: busybox
@@ -36,7 +40,7 @@ spec:
               name: metrics
           resources:
             requests:
-              cpu: "50m"
+              cpu: "10m"
               memory: "128Mi"
             limits:
               cpu: "500m"
