--- a/K8s-Config/Apps/consumidor.yml
+++ b/K8s-Config/Apps/consumidor.yml
@@ -54,6 +54,8 @@ spec:
                 secretKeyRef:
                   name: rabbit-secret
                   key: RABBITMQ_PASS
+            - name: RABBITMQ_HOST
+              value: "rabbitmq-service"
             
             # 2. Variáveis do MongoDB (necessárias para o config.py)
             - name: MONGO_URL
