--- a/K8s-Config/Infraestrutura/Secrets/rabbit-secret.yml
+++ b/K8s-Config/Infraestrutura/Secrets/rabbit-secret.yml
@@ -5,5 +5,5 @@ metadata:
   namespace: grupo2
 type: Opaque
 data:
-  username: ZGVmYXVsdF91c2VyX3l1WXFHWF9XX19kUzN5cDFrdDE=
-  password: azNUZkNXZVlqWEVnRURNMkxaM0JaNkdiUU9OMnZfS1g=
+  username: Z3J1cG8y
+  password: czJkM2Y0ZzVoNmo3
