--- a/K8s-Config/Infraestrutura/Mongo/mongo-config.yml
+++ b/K8s-Config/Infraestrutura/Mongo/mongo-config.yml
@@ -7,5 +7,5 @@ metadata:
   namespace: grupo2
 data:
   # Service Discovery dinámico - K8s resuelve automáticamente el IP
-  # Formato: mongodb://nombre-servicio.namespace.svc.cluster.local:port
-  mongo-url: mongodb://mongo-service.grupo2.svc.cluster.local:27017
+  # Solo host:puerto (sin mongodb://) ya que el código añade ese prefijo
+  mongo-url: mongo-service.grupo2.svc.cluster.local:27017
