--- a/K8s-Config/Apps/consumidor.yml
+++ b/K8s-Config/Apps/consumidor.yml
@@ -71,11 +71,16 @@ spec:
               value: "rabbitmq-cluster.rabbitmq-system.svc.cluster.local"
             
             # 2. Variáveis do MongoDB (necessárias para o config.py)
-            - name: MONGO_URL
+            - name: MONGO_HOST
               valueFrom:
                 configMapKeyRef:
                   name: mongo-config
-                  key: mongo-url
+                  key: mongo-host
+            - name: MONGO_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: mongo-config
+                  key: mongo-port
             - name: MONGO_USER
               valueFrom:
                 secretKeyRef:
