--- a/K8s-Config/Infraestrutura/Local/RabbitMQ/rabbit-config.yml
+++ b/K8s-Config/Infraestrutura/Local/RabbitMQ/rabbit-config.yml
@@ -4,6 +4,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: rabbit-config
-  namespace: sd
+  namespace: grupo2
 data:
   RABBITMQ_URL: amqp://rabbit-service
