--- a/K8s-Config/Infraestrutura/Local/RabbitMQ/rabbit-secret.yml
+++ b/K8s-Config/Infraestrutura/Local/RabbitMQ/rabbit-secret.yml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: rabbit-secret
-  namespace: sd
+  namespace: grupo2
 type: Opaque
 data:
   # User: SD_RabbitMQ_Admin
