Changes to local

--- a/K8s-Config/Infraestrutura/Local/RabbitMQ/rabbit-secret.yml
+++ b/K8s-Config/Infraestrutura/Local/RabbitMQ/rabbit-secret.yml
@@ -8,6 +8,6 @@ metadata:
 type: Opaque
 data:
   # User: SD_RabbitMQ_Admin
-  RABBITMQ_USER: U0RfUmFiYml0TVFfQWRtaW4=
+  username: U0RfUmFiYml0TVFfQWRtaW4=
   # Password: SD_RabbitMQ_Admin123_PWD
-  RABBITMQ_PASS: U0RfUmFiYml0TVFfQWRtaW4xMjNfUFdE
+  password: U0RfUmFiYml0TVFfQWRtaW4xMjNfUFdE
