Changes to local3.0

--- a/K8s-Config/Infraestrutura/Local/RabbitMQ/rabbit.yml
+++ b/K8s-Config/Infraestrutura/Local/RabbitMQ/rabbit.yml
@@ -33,12 +33,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: rabbit-secret
-                  key: RABBITMQ_USER
+                  key: username
             - name: RABBITMQ_DEFAULT_PASS
               valueFrom:
                 secretKeyRef:
                   name: rabbit-secret
-                  key: RABBITMQ_PASS
+                  key: password
             # Habilita o plugin do Prometheus no arranque
             - name: RABBITMQ_PLUGINS
               value: "rabbitmq_prometheus"
