changing local cluster 5.0

--- a/K8s-Config/Infraestrutura/Local/kustomization.yaml
+++ b/K8s-Config/Infraestrutura/Local/kustomization.yaml
@@ -24,6 +24,7 @@ resources:
   - Monitoring/prometheus.yml
   - Monitoring/grafana.yml
   - Monitoring/dashboard_grafana.yml
+  - Monitoring/kube-state-metrics.yml
   
   # Metrics Server
   - Metrics/metricsServer.yml
