--- a/K8s-Config/Infraestrutura/Local/Monitoring/prometheus.yml
+++ b/K8s-Config/Infraestrutura/Local/Monitoring/prometheus.yml
@@ -13,6 +13,8 @@ rules:
 - apiGroups: [""]
   resources:
   - nodes
+  - nodes/proxy
+  - nodes/metrics
   - services
   - endpoints
   - pods
@@ -22,6 +24,10 @@ rules:
   resources:
   - ingresses
   verbs: ["get", "list", "watch"]
+- nonResourceURLs:
+  - /metrics
+  - /metrics/cadvisor
+  verbs: ["get"]
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -51,7 +57,79 @@ data:
   prometheus.yml: |
     global:
       scrape_interval: 15s
+      evaluation_interval: 15s
     scrape_configs:
+      # Job para kube-state-metrics (métricas de estado de Kubernetes)
+      - job_name: 'kube-state-metrics'
+        static_configs:
+          - targets: ['kube-state-metrics.monitoring.svc.cluster.local:8080']
+      
+      # Job para métricas de nodos (kubelet/cAdvisor)
+      - job_name: 'kubernetes-nodes'
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          insecure_skip_verify: true
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        kubernetes_sd_configs:
+          - role: node
+        relabel_configs:
+          - action: labelmap
+            regex: __meta_kubernetes_node_label_(.+)
+          - target_label: __address__
+            replacement: kubernetes.default.svc:443
+          - source_labels: [__meta_kubernetes_node_name]
+            regex: (.+)
+            target_label: __metrics_path__
+            replacement: /api/v1/nodes/${1}/proxy/metrics
+      
+      # Job para métricas de cAdvisor (métricas de contenedores)
+      - job_name: 'kubernetes-cadvisor'
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          insecure_skip_verify: true
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        kubernetes_sd_configs:
+          - role: node
+        relabel_configs:
+          - action: labelmap
+            regex: __meta_kubernetes_node_label_(.+)
+          - target_label: __address__
+            replacement: kubernetes.default.svc:443
+          - source_labels: [__meta_kubernetes_node_name]
+            regex: (.+)
+            target_label: __metrics_path__
+            replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
+          - source_labels: [__meta_kubernetes_node_name]
+            action: replace
+            target_label: node
+      
+      # Job para RabbitMQ en rabbitmq-system (si usas el operator)
+      - job_name: 'rabbitmq-cluster'
+        kubernetes_sd_configs:
+          - role: endpoints
+            namespaces:
+              names:
+              - rabbitmq-system
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_component]
+            action: keep
+            regex: rabbitmq
+          - source_labels: [__meta_kubernetes_endpoint_port_name]
+            action: keep
+            regex: prometheus
+          - source_labels: [__meta_kubernetes_namespace]
+            action: replace
+            target_label: namespace
+          - source_labels: [__meta_kubernetes_service_name]
+            action: replace
+            target_label: service
+          - source_labels: [__meta_kubernetes_pod_name]
+            action: replace
+            target_label: pod
+      
+      # Job para pods con anotaciones prometheus.io/* (apps personalizadas)
       - job_name: 'kubernetes-pods'
         kubernetes_sd_configs:
           - role: pod
@@ -71,6 +149,16 @@ data:
             regex: ([^:]+)(?::\d+)?;(\d+)
             replacement: $1:$2
             target_label: __address__
+          # Adiciona labels de namespace e pod
+          - source_labels: [__meta_kubernetes_namespace]
+            action: replace
+            target_label: namespace
+          - source_labels: [__meta_kubernetes_pod_name]
+            action: replace
+            target_label: pod
+          - source_labels: [__meta_kubernetes_pod_label_app]
+            action: replace
+            target_label: app
 ---
 apiVersion: apps/v1
 kind: Deployment
