--- a/K8s-Config/Infraestrutura/Local/Monitoring/prometheus.yml
+++ b/K8s-Config/Infraestrutura/Local/Monitoring/prometheus.yml
@@ -105,29 +105,34 @@ data:
             action: replace
             target_label: node
       
-      # Job para RabbitMQ en rabbitmq-system (si usas el operator)
+      # Job para RabbitMQ local en namespace grupo2
       - job_name: 'rabbitmq-cluster'
         kubernetes_sd_configs:
-          - role: endpoints
+          - role: pod
             namespaces:
               names:
-              - rabbitmq-system
+              - grupo2
         relabel_configs:
-          - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_component]
+          # Solo pods con label app=rabbit
+          - source_labels: [__meta_kubernetes_pod_label_app]
             action: keep
-            regex: rabbitmq
-          - source_labels: [__meta_kubernetes_endpoint_port_name]
-            action: keep
-            regex: prometheus
+            regex: rabbit
+          # Usar el puerto 15692
+          - source_labels: [__address__]
+            action: replace
+            target_label: __address__
+            regex: ([^:]+)(?::\d+)?
+            replacement: $1:15692
+          # Agregar labels
           - source_labels: [__meta_kubernetes_namespace]
             action: replace
             target_label: namespace
-          - source_labels: [__meta_kubernetes_service_name]
-            action: replace
-            target_label: service
           - source_labels: [__meta_kubernetes_pod_name]
             action: replace
             target_label: pod
+          - action: replace
+            target_label: job
+            replacement: rabbitmq-cluster
       
       # Job para pods con anotaciones prometheus.io/* (apps personalizadas)
       - job_name: 'kubernetes-pods'
